parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ELSE
    THEN

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> ID ASSIGN expression SEMICOLON
Rule 4     expression -> expression PLUS expression
Rule 5     expression -> expression MINUS expression
Rule 6     expression -> expression TIMES expression
Rule 7     expression -> expression DIVIDE expression
Rule 8     expression -> expression GREATERTHAN expression
Rule 9     expression -> expression LESSTHAN expression
Rule 10    expression -> MINUS expression
Rule 11    expression -> NUMBER
Rule 12    expression -> ID
Rule 13    statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE
Rule 14    statements -> statements statement
Rule 15    statements -> statement

Terminals, with rules where they appear

ASSIGN               : 3
DIVIDE               : 7
ELSE                 : 
GREATERTHAN          : 8
ID                   : 3 12
IF                   : 13
LBRACE               : 13
LESSTHAN             : 9
LPAREN               : 13
MINUS                : 5 10
NUMBER               : 11
PLUS                 : 4
RBRACE               : 13
RPAREN               : 13
SEMICOLON            : 3
THEN                 : 
TIMES                : 6
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 4 5 5 6 6 7 7 8 8 9 9 10 13
program              : 1 0
statement            : 1 2 14 15
statements           : 13 14

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . ID ASSIGN expression SEMICOLON
    (13) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE

    ID              shift and go to state 3
    IF              shift and go to state 4

    program                        shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . ID ASSIGN expression SEMICOLON
    (13) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE

    ID              shift and go to state 3
    IF              shift and go to state 4

    statement                      shift and go to state 5

state 2

    (2) program -> statement .

    ID              reduce using rule 2 (program -> statement .)
    IF              reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> ID . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 6


state 4

    (13) statement -> IF . LPAREN expression RPAREN LBRACE statements RBRACE

    LPAREN          shift and go to state 7


state 5

    (1) program -> program statement .

    ID              reduce using rule 1 (program -> program statement .)
    IF              reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 6

    (3) statement -> ID ASSIGN . expression SEMICOLON
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 9

state 7

    (13) statement -> IF LPAREN . expression RPAREN LBRACE statements RBRACE
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 12

state 8

    (12) expression -> ID .

    SEMICOLON       reduce using rule 12 (expression -> ID .)
    PLUS            reduce using rule 12 (expression -> ID .)
    MINUS           reduce using rule 12 (expression -> ID .)
    TIMES           reduce using rule 12 (expression -> ID .)
    DIVIDE          reduce using rule 12 (expression -> ID .)
    GREATERTHAN     reduce using rule 12 (expression -> ID .)
    LESSTHAN        reduce using rule 12 (expression -> ID .)
    RPAREN          reduce using rule 12 (expression -> ID .)


state 9

    (3) statement -> ID ASSIGN expression . SEMICOLON
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

    SEMICOLON       shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    GREATERTHAN     shift and go to state 18
    LESSTHAN        shift and go to state 19


state 10

    (10) expression -> MINUS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 20

state 11

    (11) expression -> NUMBER .

    SEMICOLON       reduce using rule 11 (expression -> NUMBER .)
    PLUS            reduce using rule 11 (expression -> NUMBER .)
    MINUS           reduce using rule 11 (expression -> NUMBER .)
    TIMES           reduce using rule 11 (expression -> NUMBER .)
    DIVIDE          reduce using rule 11 (expression -> NUMBER .)
    GREATERTHAN     reduce using rule 11 (expression -> NUMBER .)
    LESSTHAN        reduce using rule 11 (expression -> NUMBER .)
    RPAREN          reduce using rule 11 (expression -> NUMBER .)


state 12

    (13) statement -> IF LPAREN expression . RPAREN LBRACE statements RBRACE
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

    RPAREN          shift and go to state 21
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    GREATERTHAN     shift and go to state 18
    LESSTHAN        shift and go to state 19


state 13

    (3) statement -> ID ASSIGN expression SEMICOLON .

    ID              reduce using rule 3 (statement -> ID ASSIGN expression SEMICOLON .)
    IF              reduce using rule 3 (statement -> ID ASSIGN expression SEMICOLON .)
    $end            reduce using rule 3 (statement -> ID ASSIGN expression SEMICOLON .)
    RBRACE          reduce using rule 3 (statement -> ID ASSIGN expression SEMICOLON .)


state 14

    (4) expression -> expression PLUS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 22

state 15

    (5) expression -> expression MINUS . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 23

state 16

    (6) expression -> expression TIMES . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 24

state 17

    (7) expression -> expression DIVIDE . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 25

state 18

    (8) expression -> expression GREATERTHAN . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 26

state 19

    (9) expression -> expression LESSTHAN . expression
    (4) expression -> . expression PLUS expression
    (5) expression -> . expression MINUS expression
    (6) expression -> . expression TIMES expression
    (7) expression -> . expression DIVIDE expression
    (8) expression -> . expression GREATERTHAN expression
    (9) expression -> . expression LESSTHAN expression
    (10) expression -> . MINUS expression
    (11) expression -> . NUMBER
    (12) expression -> . ID

    MINUS           shift and go to state 10
    NUMBER          shift and go to state 11
    ID              shift and go to state 8

    expression                     shift and go to state 27

state 20

    (10) expression -> MINUS expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

    SEMICOLON       reduce using rule 10 (expression -> MINUS expression .)
    PLUS            reduce using rule 10 (expression -> MINUS expression .)
    MINUS           reduce using rule 10 (expression -> MINUS expression .)
    TIMES           reduce using rule 10 (expression -> MINUS expression .)
    DIVIDE          reduce using rule 10 (expression -> MINUS expression .)
    GREATERTHAN     reduce using rule 10 (expression -> MINUS expression .)
    LESSTHAN        reduce using rule 10 (expression -> MINUS expression .)
    RPAREN          reduce using rule 10 (expression -> MINUS expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! GREATERTHAN     [ shift and go to state 18 ]
  ! LESSTHAN        [ shift and go to state 19 ]


state 21

    (13) statement -> IF LPAREN expression RPAREN . LBRACE statements RBRACE

    LBRACE          shift and go to state 28


state 22

    (4) expression -> expression PLUS expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

    SEMICOLON       reduce using rule 4 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 4 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 4 (expression -> expression PLUS expression .)
    GREATERTHAN     reduce using rule 4 (expression -> expression PLUS expression .)
    LESSTHAN        reduce using rule 4 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 4 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! TIMES           [ reduce using rule 4 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 4 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! GREATERTHAN     [ shift and go to state 18 ]
  ! LESSTHAN        [ shift and go to state 19 ]


state 23

    (5) expression -> expression MINUS expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

    SEMICOLON       reduce using rule 5 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 5 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 5 (expression -> expression MINUS expression .)
    GREATERTHAN     reduce using rule 5 (expression -> expression MINUS expression .)
    LESSTHAN        reduce using rule 5 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 5 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17

  ! TIMES           [ reduce using rule 5 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 5 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! GREATERTHAN     [ shift and go to state 18 ]
  ! LESSTHAN        [ shift and go to state 19 ]


state 24

    (6) expression -> expression TIMES expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

    SEMICOLON       reduce using rule 6 (expression -> expression TIMES expression .)
    PLUS            reduce using rule 6 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 6 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 6 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 6 (expression -> expression TIMES expression .)
    GREATERTHAN     reduce using rule 6 (expression -> expression TIMES expression .)
    LESSTHAN        reduce using rule 6 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 6 (expression -> expression TIMES expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! GREATERTHAN     [ shift and go to state 18 ]
  ! LESSTHAN        [ shift and go to state 19 ]


state 25

    (7) expression -> expression DIVIDE expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

    SEMICOLON       reduce using rule 7 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 7 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 7 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 7 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 7 (expression -> expression DIVIDE expression .)
    GREATERTHAN     reduce using rule 7 (expression -> expression DIVIDE expression .)
    LESSTHAN        reduce using rule 7 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 7 (expression -> expression DIVIDE expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! GREATERTHAN     [ shift and go to state 18 ]
  ! LESSTHAN        [ shift and go to state 19 ]


state 26

    (8) expression -> expression GREATERTHAN expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GREATERTHAN resolved as shift
  ! shift/reduce conflict for LESSTHAN resolved as shift
    SEMICOLON       reduce using rule 8 (expression -> expression GREATERTHAN expression .)
    RPAREN          reduce using rule 8 (expression -> expression GREATERTHAN expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    GREATERTHAN     shift and go to state 18
    LESSTHAN        shift and go to state 19

  ! PLUS            [ reduce using rule 8 (expression -> expression GREATERTHAN expression .) ]
  ! MINUS           [ reduce using rule 8 (expression -> expression GREATERTHAN expression .) ]
  ! TIMES           [ reduce using rule 8 (expression -> expression GREATERTHAN expression .) ]
  ! DIVIDE          [ reduce using rule 8 (expression -> expression GREATERTHAN expression .) ]
  ! GREATERTHAN     [ reduce using rule 8 (expression -> expression GREATERTHAN expression .) ]
  ! LESSTHAN        [ reduce using rule 8 (expression -> expression GREATERTHAN expression .) ]


state 27

    (9) expression -> expression LESSTHAN expression .
    (4) expression -> expression . PLUS expression
    (5) expression -> expression . MINUS expression
    (6) expression -> expression . TIMES expression
    (7) expression -> expression . DIVIDE expression
    (8) expression -> expression . GREATERTHAN expression
    (9) expression -> expression . LESSTHAN expression

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for GREATERTHAN resolved as shift
  ! shift/reduce conflict for LESSTHAN resolved as shift
    SEMICOLON       reduce using rule 9 (expression -> expression LESSTHAN expression .)
    RPAREN          reduce using rule 9 (expression -> expression LESSTHAN expression .)
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    GREATERTHAN     shift and go to state 18
    LESSTHAN        shift and go to state 19

  ! PLUS            [ reduce using rule 9 (expression -> expression LESSTHAN expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression LESSTHAN expression .) ]
  ! TIMES           [ reduce using rule 9 (expression -> expression LESSTHAN expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression LESSTHAN expression .) ]
  ! GREATERTHAN     [ reduce using rule 9 (expression -> expression LESSTHAN expression .) ]
  ! LESSTHAN        [ reduce using rule 9 (expression -> expression LESSTHAN expression .) ]


state 28

    (13) statement -> IF LPAREN expression RPAREN LBRACE . statements RBRACE
    (14) statements -> . statements statement
    (15) statements -> . statement
    (3) statement -> . ID ASSIGN expression SEMICOLON
    (13) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE

    ID              shift and go to state 3
    IF              shift and go to state 4

    statements                     shift and go to state 29
    statement                      shift and go to state 30

state 29

    (13) statement -> IF LPAREN expression RPAREN LBRACE statements . RBRACE
    (14) statements -> statements . statement
    (3) statement -> . ID ASSIGN expression SEMICOLON
    (13) statement -> . IF LPAREN expression RPAREN LBRACE statements RBRACE

    RBRACE          shift and go to state 31
    ID              shift and go to state 3
    IF              shift and go to state 4

    statement                      shift and go to state 32

state 30

    (15) statements -> statement .

    RBRACE          reduce using rule 15 (statements -> statement .)
    ID              reduce using rule 15 (statements -> statement .)
    IF              reduce using rule 15 (statements -> statement .)


state 31

    (13) statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE .

    ID              reduce using rule 13 (statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE .)
    IF              reduce using rule 13 (statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE .)
    $end            reduce using rule 13 (statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE .)
    RBRACE          reduce using rule 13 (statement -> IF LPAREN expression RPAREN LBRACE statements RBRACE .)


state 32

    (14) statements -> statements statement .

    RBRACE          reduce using rule 14 (statements -> statements statement .)
    ID              reduce using rule 14 (statements -> statements statement .)
    IF              reduce using rule 14 (statements -> statements statement .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for PLUS in state 26 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 26 resolved as shift
WARNING: shift/reduce conflict for TIMES in state 26 resolved as shift
WARNING: shift/reduce conflict for DIVIDE in state 26 resolved as shift
WARNING: shift/reduce conflict for GREATERTHAN in state 26 resolved as shift
WARNING: shift/reduce conflict for LESSTHAN in state 26 resolved as shift
WARNING: shift/reduce conflict for PLUS in state 27 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 27 resolved as shift
WARNING: shift/reduce conflict for TIMES in state 27 resolved as shift
WARNING: shift/reduce conflict for DIVIDE in state 27 resolved as shift
WARNING: shift/reduce conflict for GREATERTHAN in state 27 resolved as shift
WARNING: shift/reduce conflict for LESSTHAN in state 27 resolved as shift
